--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,8 +29,8 @@
       <input type="password" name="password" id="password" value="">
     </div>
     <div class="form-group">
-      <label for="ps">Enable prepared statements:</label>
-      <input type="checkbox" id="ps" name="ps">
+      <label for="secured">Enable secured:</label>
+      <input type="checkbox" id="secured" name="secured">
     </div>
     <button type="submit" name="login">Login</button>
   </form>
